<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:padding="2dp"
    android:background="@android:color/white">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="3.14dp"

        app:cardCornerRadius="8dp"
        android:backgroundTint="#F8FDFF"
        android:layout_marginBottom="3.14dp"
        android:background="@color/white"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical"

            >


            <TextView android:id="@+id/travels"

                android:text="busname"
                android:fontFamily="@font/neue_haas_unica_pro_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >

                <TextView android:id="@+id/busType"
                    android:text="busname"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                android:gravity="end"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout

                    android:id="@+id/constraintlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginEnd="5dp"
                    android:background="@color/green"
                    android:layout_marginTop="7dp"
                    android:orientation="horizontal"

                    >

                    <ImageView
                        android:id="@+id/starimg"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:src="@drawable/baseline_star_24"

                        android:layout_marginTop="2dp"
                        />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="4.0"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/likedViews"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@color/green"
                        android:text="@string/_1_2k"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingEnd="10dp"
                        />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="5dp"
                >

                <TextView android:id="@+id/availableSeats"
                    android:layout_width="wrap_content"
                    android:text="availableSeats"
                    android:fontFamily="@font/neue_haas_unica_pro_medium"
                    android:textColor="#007B1D"
                    android:background="#E5F2E8"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"/>

                <TextView android:id="@+id/price"
                    android:gravity="end"
                    android:text="price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >








                <ImageView
                    android:id="@+id/pickupsysmol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:contentDescription="@string/todo"

                    android:layout_marginTop="12dp"
                    android:src="@drawable/vector"

                    android:paddingStart="10px"
                    />

                <TextView
                    android:id="@+id/departureTime"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    android:text="11.00 PM"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />

                <ImageView
                    android:id="@+id/forwarddirections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"

                    android:src="@drawable/group_26"
                    />

                <ImageView
                    android:id="@+id/droping_point_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/frame"
                    />

                <TextView
                    android:id="@+id/arrivalTime"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:text="4.00 PM"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/_5hrs"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />




            </LinearLayout>
            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#DBDBDB"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


                <TextView
                    android:id="@+id/livetracking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:paddingStart="10px"

                    android:text="@string/live_tracking"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/neue_haas_unica_pro_medium"

                    />

                <TextView
                    android:id="@+id/Vilvaverified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vilva_verified"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/neue_haas_unica_pro_medium"
                    />


                <!-- TextView with Underline -->

                <!-- Line Below the TextView -->
                <TextView
                    android:id="@+id/textview15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/view_more"

                    android:textColor="@color/red"
                    android:layout_marginTop="4dp"
                    android:gravity="end"
                    android:fontFamily="@font/neue_haas_unica_pro_medium"


                    android:layout_marginEnd="6dp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

